# UCf

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  backend-implementer.md  docker-compose.yml  extractor.md  frontend-implementer.md  migration-guard.md  planner.md  pr-standards.md  pyproject.toml  repo-explorer.md  repo-safety.md
.claude/: settings.json
.claude/agents/: migration-guard.md  reviewer.md
.claude/rules/: api-contracts.md  migrations.md  testing.md
app/: __init__.py  config.py  deps.py  main.py
app/routes/: batches.py  evals.py  health.py  patches.py  reviews.py  runs.py  specs.py  worktrees.py
canon/schemas/: event.schema.json  evidence.schema.json  extraction_result.schema.json
docs/: architecture.md
evals/: runner.py
evals/scorers/: __init__.py  evidence_scorer.py  extraction_scorer.py  state_scorer.py
foundry/: __init__.py
foundry/contracts/: __init__.py  eval_models.py  extraction_models.py  review_models.py  run_models.py  shared.py  task_types.py
foundry/db/: __init__.py  engine.py  models.py
foundry/git/: __init__.py  branch.py  pr.py  worktree.py
foundry/orchestration/: __init__.py  agent_runner.py  model_router.py  prompt_templates.py  run_engine.py
foundry/providers/: __init__.py  claude_agent.py  claude_batch.py  claude_messages.py  github.py
foundry/storage/: __init__.py  artifact_store.py  log_store.py
foundry/tasks/: __init__.py  bug_fix.py  (+7 more)
scripts/: export_artifacts.py  run_task.py  seed_db.py
tests/: __init__.py  conftest.py
workers/: batch_worker.py  cleanup_worker.py  run_worker.py
(+46 files in other folders)
